# flake-artifacts

./: README.md  README.org
.github/: README.md
config/Butchered-NVIM/niflheim/: init.lua
config/Butchered-NVIM/niflheim/fnl/: settings.fnl
config/FNLbutchered_nvim/: README.md
config/eww/: README.org  default.nix  scripts.nix
config/eww/config/scripts/: eww-mails  eww-music-info  eww-open-apps  eww-open-folders  eww-open-links  eww-weather-info
config/my-taffybar/: flake.nix
config/ncmpcpp/: README.org  default.nix
config/ncmpcpp/ncmpcpp-ueberzug/: default.nix
config/neovim/config/lua/: chadrc.lua  mappings.lua  pluginList.lua
config/neovim/ereshkigal/fnl/: packer.fnl
config/taffybar/: flake.nix  overlay.nix
config/taffybar/ayu-taffybar/: flake.nix  overlay.nix
config/window-manager/my-xmonad/: my-xmonad.cabal
config/xmonad/: xmonad.nix
config/xmonad/config/: flake.nix  overlay.nix  xmonad.hs
config/xmonad/ivan-xmonad/: flake.nix  my-xmonad.cabal  overlay.nix  xmonad.hs
modules/desktop/: brave.nix  xkbLayout.nix  xmonad.nix
modules/desktop/gaming/: lutris.nix
modules/shell/: zsh.nix
modules/themes/ayu-dark/: README.md
modules/themes/catppuccin/: README.md
modules/themes/catppuccin/nvim/: catppuccin.fnl  pack.fnl
modules/themes/kanagawa/: README.md
modules/themes/one-dark/: README.md
modules/xmonad/: passage.nix
xmonad/: default.nix  passage.nix
xmonad/scripts/: build
xmonad/xmonad-icy/: xmonad-icy.cabal
xmonad/xmonad-icy/.stack-work/: stack.sqlite3
xmonad/xmonad-icy/lib/: xmonad.hs
(+11 files in other folders)
