name:           xmonad-icy
version:        0.16
synopsis:       Xmonad configuration based on xmonad-atif
homepage:       https://github.com/Icy-Thought/Snowflake
author:         Icy-Thought
maintainer:     gilganyx@pm.me
license:        GPL-3
cabal-version:  1.12
build-type:     Simple

executable xmobar
  main-is: xmobar.hs
  other-modules:
      Theme.Theme
      Theme.Xresources
  hs-source-dirs:
      lib
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , xmobar
    , xmonad-contrib >=0.16
  default-language: Haskell2010

executable xmonad
  main-is: xmonad.hs
  other-modules:
      Theme.Theme
      Theme.Xresources
  hs-source-dirs:
      lib
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -Wno-missing-signatures
  build-depends:
      X11 >=1.10
    , base
    , containers
    , xmonad
    , xmonad-contrib >=0.16
  default-language: Haskell2010
